--- a/package.json
+++ b/package.json
@@ -14,15 +14,35 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/lab": "^5.0.0-alpha.162",
+    "@mui/material": "^5.15.6",
+    "axios": "^1.6.7",
     "framer-motion": "^5.0.0",
+    "katex": "^0.16.9",
     "next": "^12.0.0",
+    "next-remove-imports": "^1.0.12",
     "next-seo": "^4.28.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "prismjs": "^1.29.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
+    "react-hook-form": "^7.50.0",
+    "react-is": "^18.2.0",
+    "react-katex": "^3.0.1",
+    "react-latex-next": "^2.2.0",
     "react-scroll": "^1.8.4",
+    "react-simple-code-editor": "^0.13.1",
+    "rehype-rewrite": "^4.0.2",
+    "sass": "^1.70.0",
     "smooth-scroll": "^16.1.3",
+    "streamlit-component-lib": "^2.0.0",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
