--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,8 @@
         "project": "./tsconfig.json"
       },
       "rules": {
+        "no-shadow": "off",
+      "@typescript-eslint/no-shadow": "off",
         "prettier/prettier": [
           "error",
           {
