--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.15.6",
     "axios": "^1.6.7",
+    "eslint": "^7.32.0",
     "framer-motion": "^5.0.0",
     "katex": "^0.16.9",
     "next": "^12.0.0",
@@ -48,12 +49,13 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.0",
     "@types/node": "^16.11.6",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^17.0.33",
+    "@types/react-katex": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "autoprefixer": "^10.3.7",
     "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-next": "^12.0.0",
@@ -71,7 +73,9 @@
     "prettier": "^2.4.1",
     "rimraf": "^3.0.2",
     "tailwindcss": "^2.2.17",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "webpack": "^5.90.2",
+    "webpack-cli": "^5.1.4"
   },
   "license": "ISC"
 }
