--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/lab": "^5.0.0-alpha.162",
     "@mui/material": "^5.15.6",
+    "@vercel/analytics": "^1.2.0",
     "axios": "^1.6.7",
     "eslint": "^7.32.0",
     "framer-motion": "^5.0.0",
